[project]
name = "ai-image-util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow<12.2",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers<5",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
